--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "aws-sdk-fluent-builder",
+  "name": "typescript-inject",
   "version": "0.0.0",
-  "description": "Fluent builder API for AWS SDK",
+  "description": "Typescript Dependency Injection Library",
   "main": "index.js",
   "typings": "index.d.ts",
   "files": [
@@ -13,11 +13,9 @@
   "scripts": {
     "build": "tsc",
     "test": "ts-node ./spec/runner.ts",
-    "e2e-prerequisite": "aws dynamodb create-table --table-name dynamo-db-module-e2e --attribute-definitions AttributeName=id,AttributeType=S --key-schema AttributeName=id,KeyType=HASH --provisioned-throughput ReadCapacityUnits=1,WriteCapacityUnits=1 --query TableDescription.TableArn --output text --region eu-west-1 && aws sns create-topic --name sns-module-e2e --region eu-west-1",
-    "e2e": "AWS_REGION=eu-west-1 ts-node ./e2e/runner.ts && AWS_REGION=eu-west-1 ts-node ./e2e/clean-resources.ts",
     "coverage": "./node_modules/.bin/nyc ./node_modules/.bin/ts-node ./spec/runner.ts",
-    "lint": "node_modules/.bin/tslint -c tslint.json 'src/**/*.ts' && node_modules/.bin/tslint -c tslint.json 'e2e/**/*.ts' -e '**/*.d.ts'",
-    "check": "npm run lint && npm test && npm run e2e"
+    "lint": "node_modules/.bin/tslint -c tslint.json 'src/**/*.ts' -e '**/*.d.ts'",
+    "check": "npm run lint && npm test"
   },
   "nyc": {
     "extension": [
@@ -27,10 +25,6 @@
     "exclude": [
       "**/*.d.ts",
       "coverage/*.js",
-      "e2e/*.ts",
-      "e2e/**/*.ts",
-      "dist/**/*.ts",
-      "dist/**/*.js",
       "src/**/*.spec.ts",
       "spec/*.ts"
     ],
@@ -41,7 +35,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@github.com/vdubois/aws-sdk-fluent-builder.git"
+    "url": "git+ssh://git@github.com/vdubois/typescript-inject.git"
   },
   "keywords": [
     "aws",
@@ -53,26 +47,21 @@
   "author": "Vincent Dubois",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/vdubois/aws-sdk-fluent-builder/issues"
+    "url": "https://github.com/vdubois/typescript-inject/issues"
   },
-  "homepage": "https://github.com/vdubois/aws-sdk-fluent-builder#readme",
+  "homepage": "https://github.com/vdubois/typescript-inject#readme",
   "devDependencies": {
-    "@types/aws-lambda": "0.0.24",
     "@types/jasmine": "^2.6.2",
     "@types/node": "^8.0.53",
-    "aws-sdk": "^2.171.0",
     "jasmine": "^2.8.0",
     "jasmine-reporters": "^2.2.1",
     "jasmine-spec-reporter": "^4.2.1",
-    "needle": "^2.1.0",
     "nyc": "^11.3.0",
     "ts-loader": "^3.2.0",
     "ts-node": "^4.0.1",
     "tslint": "^5.4.3",
-    "typescript": "^2.3.4",
-    "webpack": "^3.10.0"
+    "typescript": "^2.3.4"
   },
   "dependencies": {
-    "aws-sdk": "^2.169.0"
   }
 }
