--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "typescript-inject",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "Typescript Dependency Injection Library",
   "main": "index.js",
   "typings": "index.d.ts",
@@ -62,6 +62,5 @@
     "tslint": "^5.4.3",
     "typescript": "^2.3.4"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
